Fix for alignment.

--- a/framework/less/components.less
+++ b/framework/less/components.less
@@ -26,17 +26,17 @@
   text-align: center;
 }
 [class*="atk-align-bottom"] {
-  &, &[class*="atk-cells"]>.atk-cell, .atk-cells &.atk-cell {
+  &, &[class*="atk-cells"]>.atk-cell, .atk-cells &.atk-cell, &.atk-layoutColumn {
     vertical-align: bottom;
   }
 }
 [class*="atk-align-middle"] {
-  &, &[class*=atk-cells]>.atk-cell, .atk-cells &.atk-cell {
+  &, &[class*=atk-cells]>.atk-cell, .atk-cells &.atk-cell, &.atk-layoutColumn {
     vertical-align: middle;
   }
 }
 [class*="atk-align-top"] {
-  &, &[class*=atk-cells]>.atk-cell, .atk-cells &.atk-cell {
+  &, &[class*=atk-cells]>.atk-cell, .atk-cells &.atk-cell, &.atk-layoutColumn {
     vertical-align: top;
   }
 }
